//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Category {
  id String [pk]
  name String [not null]
  slug String [unique, not null]
  description String
  parentId String
  parent Category
  children Category [not null]
  attributes Json
  image String
  isActive Boolean [not null, default: true]
  position Int [not null, default: 0]
  products Product [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Brand {
  id String [pk]
  name String [unique, not null]
  slug String [unique, not null]
  description String
  logo String
  website String
  isActive Boolean [not null, default: true]
  products Product [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Product {
  id String [pk]
  shopId String [not null]
  name String [not null]
  description String [not null]
  categoryId String [not null]
  category Category [not null]
  brandId String
  brand Brand
  productType ProductType [not null, default: 'SIMPLE']
  price Float [not null]
  salePrice Float
  stock Int [not null, default: 0]
  images String[] [not null]
  hasVariants Boolean [not null, default: false]
  variants ProductVariant [not null]
  attributes Json
  shipping Json
  seo Json
  slug String [unique]
  inventory Json
  warranty String
  tags String[] [not null]
  youtubeUrl String
  discountCodeId String
  status ProductStatus [not null, default: 'DRAFT']
  visibility ProductVisibility [not null, default: 'PUBLIC']
  publishDate DateTime
  isActive Boolean [not null, default: true]
  isFeatured Boolean [not null, default: false]
  views Int [not null, default: 0]
  sales Int [not null, default: 0]
  averageRating Float [not null, default: 0]
  ratingCount Int [not null, default: 0]
  ratings ProductRating [not null]
  deletedAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table ProductVariant {
  id String [pk]
  productId String [not null]
  product Product [not null]
  sku String [unique, not null]
  attributes Json [not null]
  price Float [not null]
  salePrice Float
  stock Int [not null, default: 0]
  image String
  isActive Boolean [not null, default: true]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table ProductRating {
  id String [pk]
  productId String [not null]
  product Product [not null]
  userId String [not null]
  rating Int [not null]
  title String
  content String
  images String[] [not null]
  reviewerName String
  reviewerAvatar String
  sellerResponse String
  sellerResponseAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (productId, userId) [unique]
  }
}

Enum ProductType {
  SIMPLE
  VARIABLE
  DIGITAL
}

Enum ProductStatus {
  DRAFT
  PUBLISHED
  SCHEDULED
}

Enum ProductVisibility {
  PUBLIC
  PRIVATE
  PASSWORD_PROTECTED
}

Ref: Category.parentId - Category.id [delete: No Action]

Ref: Product.categoryId > Category.id

Ref: Product.brandId > Brand.id

Ref: ProductVariant.productId > Product.id [delete: Cascade]

Ref: ProductRating.productId > Product.id [delete: Cascade]